# StudPark

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  action.yml  main.cpp  new_semester.cpp  nginx.conf
.github/workflows/: action.yml
created_templates/: main.html  profile.html  settings.html
created_templates/css/: index.css
include/: AttachmentPost.h  Attendance.h  Comment.h  Contact.h  Deadline.h  File.h  Group.h  Post.h  Recording_laboratory_work.h  Share.h  Subject.h  User.h  Wrapper.h
include/api/: API.h  AdminAPI.h  CalendarAPI.h  FilesAPI.h  GroupAPI.h  Logger.h  PostAPI.h  UserAPI.h  Utils.h
include/mailing/: sender.h
include/orm/: AttachmentPost.h  Attendance.h  Comment.h  Contact.h  Deadline.h  File.h  Group.h  Post.h  Recording_laboratory_work.h  SendMail.h  Session.h  Share.h  Student.h  Subject.h  User.h  Wrapper.h  utils.hpp  utils_wrapper.hpp
include/server/: Connection.h  ConnectionManager.h  Request.h  Response.h  Server.h  Transportation.h  server.h
include/templates/: template_engine.h
src/: Utils.cpp
src/api/: API.cpp  AdminAPI.cpp  CMakeLists.txt  CalendarAPI.cpp  FilesAPI.cpp  GroupAPI.cpp  Logger.cpp  PostAPI.cpp  UserAPI.cpp  Utils.cpp
src/mailing/: sender.cpp  sender_daemon.cpp
src/orm/: AttachmentPost.cpp  Attendance.cpp  Comment.cpp  Contact.cpp  Deadline.cpp  File.cpp  Group.cpp  Post.cpp  Recording_laboratory_work.cpp  SendMail.cpp  Session.cpp  Share.cpp  Student.cpp  Subject.cpp  User.cpp  Wrapper.cpp
src/server/: Connection.cpp  ConnectionManager.cpp  Request.cpp  Response.cpp  Server.cpp  Transportation.cpp  server.cpp
src/templates/: template_engine.cpp
templates/: add_subject.html  admin_panel.html  create_post.html  errors.html  group_list.html  login.html  main.html  profile.html  registration.html  settings.html  subjects_list.html  successful_group_create.html
templates/css/: index.css
templates/includes/: anonymousButtonsList.html  calendar.html  header.html  superuserButtonsList.html  userButtonsList.html
templates/js/: del_subject.js  export.js  main.js  post.js  upload.js
test/: test.cpp
test/api/: AdminAPI.cpp  CalendarAPI.cpp  FilesAPI.cpp  GroupAPI.cpp  Logger.cpp  PostAPI.cpp  UserAPI.cpp
test/mailing/: test_sender.cpp
test/server/: Connection.cpp  Request.cpp  Response.cpp  Server.cpp
test/templates/: test_template_engine.cpp
